# my-serial

./: .gitattributes  .gitignore  LICENSE  README.md  build-icons.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  REQUIREMENTS.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  ports.rs  serial_io.rs  session.rs  types.rs
src/lib/components/: OutputView.svelte  PortConfigPanel.svelte  SendPanel.svelte  StatusBar.svelte  Terminal.svelte
src/lib/config/: migrate.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en-US.json  zh-CN.json
src/lib/services/: line-slice.ts  recorder.ts  rx-buffer.ts
src/lib/stores/: session.ts
src/lib/tauri/: commands.ts  events.ts
src/styles/: app.css
tests/: line-slice.test.ts  rx-buffer.test.ts
