[package]
name = "my-serial"
version = "0.2.0"
description = "MySerial - Windows serial debugging tool"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

# Library + binary: Tauri 2 recommends the lib pattern so mobile targets can
# reuse the same entry point. We only ship desktop here, but keep the layout.
[lib]
name = "my_serial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TOML codec for the user config file (config.toml in app_config_dir).
toml = "0.8"
# serialport-rs is the mature cross-platform serial backend
serialport = "4.5"
# Stable async runtime used by the read loop & reconnect watcher
tokio = { version = "1", features = ["full"] }
log = "0.4"

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
